--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,12 +29,14 @@ dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 file.reference.jcalendar-1.4.jar=C:\\Users\\EMEDINA\\Downloads\\jcalendar-1.4.jar
 file.reference.jcalendar-1.4.jar-1=C:\\Users\\ASUS\\Downloads\\jcalendar-1.4.jar
+file.reference.jcalendar-1.4.jar-2=C:\\Users\\ASUS\\Documents\\Software\\jcalendar-1.4.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.MySQLDriver.classpath}:\
     ${file.reference.jcalendar-1.4.jar}:\
-    ${file.reference.jcalendar-1.4.jar-1}
+    ${file.reference.jcalendar-1.4.jar-1}:\
+    ${file.reference.jcalendar-1.4.jar-2}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
